--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-title" content="Suivi Investissement">
-    <link rel="apple-touch-icon" href="icon.png">
-    <link rel="icon" type="image/png" href="icon.png">
+    <link rel="apple-touch-icon" href="icon.PNG">
+    <link rel="icon" type="image/png" href="icon.PNG">
     <title>Dashboard Investissement</title>
     
     <!-- Tailwind CSS -->
