--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
                     <i class="fa-solid fa-chart-line text-blue-600 text-2xl mr-3"></i>
-                    <h1 class="text-xl font-bold text-gray-800 tracking-tight">InvestTrack <span class="text-xs bg-blue-100 text-blue-600 px-2 py-0.5 rounded-full ml-2">V2</span></h1>
+                    <h1 class="text-xl font-bold text-gray-800 tracking-tight">InvestTrack <span class="text-xs bg-blue-100 text-blue-600 px-2 py-0.5 rounded-full ml-2"> </span></h1>
                 </div>
                 <div class="flex items-center space-x-2">
                     <button onclick="document.getElementById('fileInput').click()" class="bg-emerald-50 text-emerald-600 hover:bg-emerald-100 px-3 py-2 rounded-lg text-sm font-medium transition flex items-center gap-2">
