--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="flex justify-between h-16">
                 <div class="flex items-center cursor-pointer" onclick="showSection('home')">
                     <i class="fa-solid fa-chart-line text-blue-600 text-2xl mr-3"></i>
-                    <h1 class="text-xl font-bold text-gray-800 tracking-tight">Bourse 3000 🚀<span class="text-xs bg-gradient-to-r from-blue-500 to-purple-600 text-white px-2 py-0.5 rounded-full ml-2 shadow-sm"></span></h1>
+                    <h1 class="text-xl font-bold text-gray-800 tracking-tight">Bourse 3000 🚀</h1>
                 </div>
                 <div class="flex items-center space-x-3">
                     <button onclick="showSection('home')" class="p-2 text-gray-500 hover:text-blue-600 transition" title="Accueil">
