--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-title" content="Levage Sécurisé">
+    <link rel="apple-touch-icon" href="icon2.png">
+    <link rel="icon" type="image/png" href="icon2.png">
+
     <title>InvestTrack V5</title>
     
     <!-- Styles -->
