--- a/index.html
+++ b/index.html
@@ -224,8 +224,9 @@
         </section>
 
         <!-- SECTION 7: BUDGET SCAN (React) -->
-        <section id="budget-view" class="hidden animate-fade-in">
-            <div id="budget-root" class="h-full"></div>
+        <!-- Correction : Ajout de 'h-[80vh]' ou 'min-h-[600px]' pour forcer la hauteur -->
+        <section id="budget-view" class="hidden animate-fade-in w-full h-[85vh] flex flex-col">
+            <div id="budget-root" class="flex-1 h-full w-full"></div>
         </section>
 
     </main>
