--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-title" content="Suivi Finance">
     <link rel="apple-touch-icon" href="icon2.png">
+    <link rel="icon" type="image/png" href="icon2.png">
     <title>InvestTrack V5 - Final</title>
     
     <meta name="theme-color" content="#2563eb">
