--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         <i class="fa-solid fa-check-circle text-green-400"></i><span id="toastMsg">Notif</span>
     </div>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="text/babel" data-type="module" src="js/main.js"></script>
     
     <script>
         window.addEventListener('load', () => { if(window.lucide) lucide.createIcons(); });
