--- a/index.html
+++ b/index.html
@@ -352,8 +352,15 @@
         <i class="fa-solid fa-check-circle text-green-400"></i><span id="toastMsg">Notif</span>
     </div>
 
-    <script type="text/babel" data-type="module" src="js/main.js"></script>
+    <script src="js/db.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/ai.js"></script>
+    <script src="js/invest.js"></script>
     
+    <script type="text/babel" src="js/budget.js"></script>
+    
+    <script type="text/babel" src="js/main.js"></script>
+
     <script>
         window.addEventListener('load', () => { if(window.lucide) lucide.createIcons(); });
     </script>
