--- a/index.html
+++ b/index.html
@@ -128,15 +128,17 @@
         </section>
 
         <section id="dashboard-view" class="hidden animate-fade-in">
-            <div class="flex items-center justify-between mb-6">
+            <div class="flex flex-col md:flex-row md:items-center justify-between mb-6 gap-4">
+                
                 <div class="breadcrumb">
                     <span onclick="window.app.nav('home')">Accueil</span> <i class="fa-solid fa-chevron-right text-xs"></i> <span class="active">Investissements</span>
                 </div>
-                <div class="flex bg-white rounded-lg shadow-sm p-1 border border-gray-200">
-                    <button onclick="window.app.nav('dashboard')" class="px-3 py-1 text-xs font-bold rounded hover:bg-gray-100 text-blue-600">Dash</button>
-                    <button onclick="window.app.nav('assets')" class="px-3 py-1 text-xs font-bold rounded hover:bg-gray-100 text-gray-600">Portif</button>
-                    <button onclick="window.app.nav('transactions')" class="px-3 py-1 text-xs font-bold rounded hover:bg-gray-100 text-gray-600">Journal</button>
-                    <button onclick="window.app.nav('projections')" class="px-3 py-1 text-xs font-bold rounded hover:bg-gray-100 text-gray-600">Futur</button>
+                
+                <div class="flex bg-white rounded-lg shadow-sm p-1 border border-gray-200 w-full md:w-auto justify-between md:justify-start overflow-x-auto">
+                    <button onclick="window.app.nav('dashboard')" class="flex-1 md:flex-none px-3 py-2 text-xs font-bold rounded hover:bg-gray-100 text-blue-600 text-center">Dash</button>
+                    <button onclick="window.app.nav('assets')" class="flex-1 md:flex-none px-3 py-2 text-xs font-bold rounded hover:bg-gray-100 text-gray-600 text-center">Portif</button>
+                    <button onclick="window.app.nav('transactions')" class="flex-1 md:flex-none px-3 py-2 text-xs font-bold rounded hover:bg-gray-100 text-gray-600 text-center">Journal</button>
+                    <button onclick="window.app.nav('projections')" class="flex-1 md:flex-none px-3 py-2 text-xs font-bold rounded hover:bg-gray-100 text-gray-600 text-center">Futur</button>
                 </div>
             </div>
 
