--- a/index.html
+++ b/index.html
@@ -162,16 +162,21 @@
                 </div>
             </div>
             
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-                <div class="bg-white p-6 rounded-xl shadow-sm">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-8">
+                <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100">
                     <h3 class="chart-title">Répartition par Compte</h3>
                     <div class="chart-container"><canvas id="pieChart"></canvas></div>
                 </div>
-                <div class="bg-white p-6 rounded-xl shadow-sm flex flex-col justify-center items-center text-center relative overflow-hidden">
-                    <div class="p-6 bg-yellow-100 rounded-full mb-4 text-yellow-600 z-10"><i class="fa-regular fa-lightbulb text-4xl"></i></div>
-                    <h3 class="text-xl font-bold text-gray-800 z-10">Conseil Bourse</h3>
-                    <p class="text-gray-600 mt-2 max-w-sm italic z-10" id="dailyTip">Chargement...</p>
+
+                <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100">
+                    <h3 class="chart-title">Répartition Sectorielle</h3>
+                    <div class="chart-container"><canvas id="sectorChart"></canvas></div>
                 </div>
+            </div>
+
+            <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100 mb-8">
+                <h3 class="chart-title">Historique des Investissements (Cash Investi)</h3>
+                <div class="chart-container" style="height: 300px;"><canvas id="yearlyBarChart"></canvas></div>
             </div>
         </section>
 
