--- a/index.html
+++ b/index.html
@@ -287,10 +287,15 @@
                         <input type="range" id="simInflation" min="0" max="10" step="0.5" value="3" class="w-full h-1 bg-gray-200 rounded-lg appearance-none cursor-pointer" oninput="document.getElementById('lblInf').innerText = this.value + '%'; window.app.updateSimulations()">
                         <div class="text-right text-xs text-gray-500 font-mono" id="lblInf">3%</div>
                     </div>
-                     <div>
+                    <div>
                         <label class="block text-[10px] font-bold text-gray-400 uppercase mb-1">Taux de Retrait (Rente)</label>
                         <input type="range" id="simWithdrawal" min="1" max="10" step="0.5" value="4" class="w-full h-1 bg-gray-200 rounded-lg appearance-none cursor-pointer" oninput="document.getElementById('lblWith').innerText = this.value + '%'; window.app.updateSimulations()">
-                        <div class="text-right text-xs text-gray-500 font-mono" id="lblWith">4%</div>
+                        <div class="flex justify-between items-center mt-1">
+                            <div class="text-xs text-gray-500 font-mono" id="lblWith">4%</div>
+                            <div class="text-xs font-bold text-emerald-600 bg-emerald-50 px-2 py-0.5 rounded border border-emerald-100">
+                                Rente: <span id="simPassiveIncome">0 €</span>/mois
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
