Fix formatting of script tag for simulator.js

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
     <script src="js/utils.js"></script>
     <script src="js/ai.js"></script>
     <script src="js/invest.js"></script>
-    <script src="js/simulator.js"></script> ```
+    <script src="js/simulator.js"></script>
     
     <script type="text/babel" src="js/budget.js"></script>
     
