--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                             <option value="Achat">Achat</option>
                             <option value="Vente">Vente</option>
                             <option value="Dividende">Dividende</option>
-                            <option value="DCA">🔄 DCA (Invest. Programmé)</option>
+                            <option value="DCA">DCA</option>
                         </select>
                     </div>
                 </div>
@@ -546,7 +546,7 @@
     </div>
 
     <div id="simulator-modal" class="hidden fixed inset-0 z-[70] bg-black/70 backdrop-blur-sm flex items-center justify-center p-4">
-        <div class="bg-white w-full max-w-4xl rounded-2xl shadow-2xl overflow-hidden animate-fade-in flex flex-col md:flex-row h-[85vh] max-h-[800px]">
+        <div class="bg-white w-full max-w-4xl rounded-2xl shadow-2xl flex flex-col md:flex-row h-auto md:h-[85vh] max-h-[90vh] overflow-y-auto md:overflow-hidden animate-fade-in">
             
             <div class="w-full md:w-1/3 bg-slate-50 p-6 border-r border-slate-200 overflow-y-auto">
                 <div class="flex justify-between items-center mb-6">
