--- a/index.html
+++ b/index.html
@@ -615,15 +615,19 @@
                     <div class="bg-slate-50 p-3 rounded-xl border border-slate-100 text-center">
                         <p class="text-[9px] font-bold text-slate-400 uppercase mb-1">Nouveau PRU</p>
                         <p id="res-new-pru" class="text-base md:text-lg font-black text-slate-800">--</p>
-                        <div id="res-pru-diff" class="mt-1 inline-block text-[9px]"></div>
+                        <div id="res-pru-diff" class="mt-1 inline-block text-[9px] min-h-[20px]"></div>
                     </div>
+                    
                     <div class="bg-slate-50 p-3 rounded-xl border border-slate-100 text-center">
                         <p class="text-[9px] font-bold text-slate-400 uppercase mb-1">Nouvelle Qté</p>
                         <p id="res-qty" class="text-base md:text-lg font-bold text-blue-600">--</p>
+                        <div id="res-qty-diff" class="mt-1 inline-block text-[9px] min-h-[20px]"></div>
                     </div>
+                    
                     <div class="bg-slate-50 p-3 rounded-xl border border-slate-100 text-center">
                         <p class="text-[9px] font-bold text-slate-400 uppercase mb-1">Poids Portif</p>
                         <p id="res-weight" class="text-base md:text-lg font-bold text-purple-600">--</p>
+                        <div id="res-weight-diff" class="mt-1 inline-block text-[9px] min-h-[20px]"></div>
                     </div>
                 </div>
 
