Replace simulator.js with invest-charts.js

--- a/index.html
+++ b/index.html
@@ -648,10 +648,9 @@
     <script src="js/utils.js"></script>
     <script src="js/ai.js"></script>
     <script src="js/invest.js"></script>
-    <script src="js/simulator.js"></script>
+    <script src="js/invest-charts.js"></script> <script src="js/simulator.js"></script>
     
     <script type="text/babel" src="js/budget.js"></script>
-    
     <script type="text/babel" src="js/main.js"></script>
 
     <script>
